--- a/app/views/todos/new.js.erb
+++ b/app/views/todos/new.js.erb
@@ -1,8 +1,9 @@
-// true すでに一度フォームが表示されている場合 : false まだフォームが表示されてない場合
-if ($('[data-model_name="goal"]').filter('[data-id="<%= @goal.id %>"]').find('form[name="todoForm"]').length) {
-    $('[data-model_name="goal"]').filter('[data-id="<%= @goal.id %>"]').find('form[name="todoForm"]').eq(0).toggle()
-    $('[data-model_name="goal"]').filter('[data-id="<%= @goal.id %>"]').find('form [name="todo[content]"]').eq(0).focus();
-} else {
-    $('[data-model_name="goal"]').filter('[data-id="<%= @goal.id %>"]').find('.goal-header').after("<%= j(render 'form', goal: @goal, todo: @todo) %>")
-    $('[data-model_name="goal"]').filter('[data-id="<%= @goal.id %>"]').find('form [name="todo[content]"]').eq(0).focus();
-}
+$("#modalArea").html("<%= j(render 'form', goal: @goal) %>")
+
+// フォームにフォーカス
+//`#modalArea`のなかから`.modal`を探してshown.bs.modalのタイミングで実行しなさい
+$("#modalArea").find(".modal").on('shown.bs.modal', () => {
+    $("#modalArea").find("form input[type=text]")[0].focus();
+})
+
+$("#modalArea").find(".modal").modal('show')
